wip: - added: query submission - added: query and run RoundExecutor - added: some frontend animation - todo: refactoring at least
