# api/src/controllers/testRoute.ts
@@ -1,0 +1,10 @@
+import { Controller, Get, Route } from 'tsoa';
+
+@Route('my_test')
+export class MyTestController extends Controller {
+  @Get()
+  public async get(): Promise<string> {
+    return "test";
+  }
+}
+
